--- a/Reto/css/styles.css
+++ b/Reto/css/styles.css
@@ -1,6 +1,6 @@
 .maincontainer {
   margin: 5px;
-  background-color: rgba(222, 216, 226, 0.733);
+  background-color: white;
   width: 650px;
   padding: 10px;
 }
@@ -10,9 +10,40 @@ h2 {
   text-align: center;
 }
 
-li {
+ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+ul li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+ul a {
   text-decoration: none;
   font-size: 22px;
-  list-style: none;
+  padding: 20px 30px;
+  margin: 0;
+  color: black;
+}
+
+ul #nav2 {
+  color: black;
+  font-weight: bold;
+}
+
+ul a:hover {
+  color: blue;
+}
+
+.article {
+  margin: 10px;
+  background-color: #fafafa;
+  height: 250px;
+  padding: 5px 35px;
+  font-size: 20px;
 }
 /*# sourceMappingURL=styles.css.map */
