--- a/Reto/sass/_stylemain.scss
+++ b/Reto/sass/_stylemain.scss
@@ -1,20 +1,44 @@
-.maincontainer{
+.maincontainer {
     margin: 5px;
-    background-color: rgba(222, 216, 226, 0.733);
+    background-color: white;
     width: 650px;
     padding: 10px;
-}
-
-h2 {
+  }
+  
+  h2 {
     font-size: 36px;
     text-align: center;
-}
-
-
-li{
-    text-decoration: none;
-    font-size:22px;
-    list-style: none;
-}
-
-    
+  }
+  
+  ul {
+    display: flex;
+    li {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    a {
+      text-decoration: none;
+      font-size: 22px;
+      padding: 20px 30px;
+      margin: 0;
+      color: black;
+    }
+    #nav2{
+        color: black;
+        font-weight: bold;
+    }
+  
+    a:hover{
+        color: blue;
+    }
+  }
+  
+  .article{
+      margin:10px;
+      background-color: rgb(250, 250, 250);
+      height: 250px;
+      padding: 5px 35px;
+      font-size: 20px;
+  }
+  
