--- a/Reto_2/Reto_2/css/styles.css
+++ b/Reto_2/Reto_2/css/styles.css
@@ -162,7 +162,7 @@ body {
 }
 
 aside {
-  width: 205.141px;
+  width: 215.703px;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -181,6 +181,9 @@ aside {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 215.703px;
+  height: 203px;
+  font-size: 16px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -193,27 +196,42 @@ aside {
           justify-content: space-evenly;
 }
 
-#asideIzq p:first-child {
+.dev {
+  color: rgb(59, 73, 223);
   font-size: 20px;
-  font-weight: 72px;
-}
-
-#asideIzq p:nth-child(2) {
-  font-size: 16px;
-  font-weight: 72px;
+  font-weight:200px;
 }
 
 .buttonIzq1 {
+  width: 215.703px;
   border: 1px solid #3b49df;
-  padding: 5px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-bottom: 7px;
+  padding-top: 7px;
   border-radius: 8%;
   text-align: center;
-  margin: 5px;
+  font-size: 16px;
+  font-weight: 200px;
 }
 
 .buttonIzq1:hover {
   color: white;
   background-color: #3b49df;
+  text-decoration: underline;
+}
+
+.login{
+  padding: 8px 16px;
+  font-size: 16px;
+  font-weight: 400px; 
+}
+.login:hover {
+background-color: rgba(59,73,223,0.1);
+text-decoration: underline;
+width: 200px;
+text-align: center;
+border-radius: 8px;
 }
 
 #containerAsideIzq2 ul li {
