--- a/Reto_2/Reto_2/sass/_asideIzq.scss
+++ b/Reto_2/Reto_2/sass/_asideIzq.scss
@@ -25,19 +25,16 @@ aside{
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    width: 215.703px;
+    height: 203px;
     
 }
 
-#asideIzq p:first-child{
+.dev {
+    color: rgb(59, 73, 223);
     font-size: 20px;
-    font-weight: 72px;
+    font-weight: 200px;
 }
-
-#asideIzq p:nth-child(2){
-    font-size: 16px;
-    font-weight: 72px;
-}
-
 
 .buttonIzq1{
     border: 1px solid rgb(59, 73, 223) ;
